--- a/app/src/main/res/layout/fragment_dependent_info.xml
+++ b/app/src/main/res/layout/fragment_dependent_info.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#0a5087"
+        android:paddingBottom="@dimen/_20sdp"
         tools:context=".DependantInfo.DependentInfoFragment">
 
 
@@ -50,13 +51,16 @@
                 android:layout_width="180dp"
                 android:layout_height="46dp"
                 android:layout_marginTop="40dp"
-                android:background="#2196F3"
+
                 android:text="@string/add_dependent"
+                android:background="@drawable/radio_flat_selector"
                 android:textColor="@color/white"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/dateId" />
+                app:layout_constraintTop_toBottomOf="@+id/dateId"
+                android:textAllCaps="false"
+                />
 
             <EditText
                 android:id="@+id/firstNameDepId"
