--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,15 +3,15 @@
 
 <!--    <style name="Theme.MedicalAppReminderJava" parent="Theme.AppCompat.Light.NoActionBar">-->
 
-    <style name="Theme.MedicalAppReminderJava" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.MedicalAppReminderJava" parent="Theme.AppCompat.Light.DarkActionBar">
 
         <!-- Primary brand color. -->
         <item name="colorPrimary">#2196F3</item>
         <item name="colorPrimaryVariant">#2196F3</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorSecondary">#3F51B5</item>
+        <item name="colorSecondaryVariant">#03A9F4</item>
         <item name="colorOnSecondary">@color/white</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
@@ -31,5 +31,7 @@
         <item name="colorPrimaryDark">#2196F3</item>
         <item name="colorAccent">#2196F3</item>
         <item name="textAppearanceButton">@style/AppTextAppearance.Button</item>
+        <item name = "android:windowActionBar">false</item>
+        <item name = "android:windowNoTitle">true</item>
     </style>
 </resources>
