--- a/app/src/main/res/layout/fragment_dependent_info.xml
+++ b/app/src/main/res/layout/fragment_dependent_info.xml
@@ -121,12 +121,15 @@
                 android:layout_marginTop="7dp"
                 android:layout_marginEnd="20dp"
                 android:ems="10"
-                android:inputType="text"
+                android:inputType="none"
                 android:minHeight="48dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/textView7"
                 app:layout_constraintTop_toBottomOf="@+id/textView8"
-                tools:ignore="SpeakableTextPresentCheck" />
+                tools:ignore="SpeakableTextPresentCheck"
+                android:focusableInTouchMode="true"
+                android:cursorVisible="false"
+                android:focusable="false" />
 
             <TextView
                 android:id="@+id/textView7"
