--- a/app/src/main/res/layout/activity_medication_modification.xml
+++ b/app/src/main/res/layout/activity_medication_modification.xml
@@ -117,7 +117,7 @@
                             android:layout_height="33dp"
                             android:layout_marginStart="16dp"
                             android:layout_marginTop="16dp"
-                            android:fontFamily="@font/HelveticaBold"
+                            android:fontFamily="@font/helvetica_bold"
                             android:text="@string/medName"
                             android:textColor="#0a5087"
                             android:textSize="18sp"
@@ -170,7 +170,7 @@
                             android:layout_height="34dp"
                             android:layout_marginStart="16dp"
                             android:layout_marginTop="16dp"
-                            android:fontFamily="@font/HelveticaBold"
+                            android:fontFamily="@font/helvetica_bold"
                             android:text="@string/reminders"
                             android:textColor="#0a5087"
                             android:textSize="18sp"
@@ -225,7 +225,7 @@
                             android:layout_marginStart="16dp"
                             android:layout_marginTop="16dp"
                             android:layout_marginBottom="16dp"
-                            android:fontFamily="@font/HelveticaBold"
+                            android:fontFamily="@font/helvetica_bold"
                             android:text="@string/medIcon"
                             android:textColor="#0a5087"
                             android:textSize="18sp"
@@ -273,7 +273,7 @@
                             android:layout_height="34dp"
                             android:layout_marginStart="16dp"
                             android:layout_marginTop="16dp"
-                            android:fontFamily="@font/HelveticaBold"
+                            android:fontFamily="@font/helvetica_bold"
                             android:text="@string/medCondition"
                             android:textColor="#0a5087"
                             android:textSize="18sp"
