--- a/app/src/main/res/layout/activity_notification_dialog.xml
+++ b/app/src/main/res/layout/activity_notification_dialog.xml
@@ -26,4 +26,12 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/openDialogeButton" />
+
+    <Button
+        android:id="@+id/storeButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="store"
+        tools:layout_editor_absoluteX="163dp"
+        tools:layout_editor_absoluteY="46dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
