--- a/app/src/main/res/layout/fragment_dependent_info.xml
+++ b/app/src/main/res/layout/fragment_dependent_info.xml
@@ -48,22 +48,22 @@
             app:layout_constraintTop_toTopOf="@+id/view">
 
             <Button
+                android:id="@+id/addDepBtn"
                 android:layout_width="180dp"
-                android:layout_height="46dp"
-                android:layout_marginTop="40dp"
+                android:layout_height="48dp"
 
-                android:text="@string/add_dependent"
+                android:layout_marginTop="40dp"
                 android:background="@drawable/radio_flat_selector"
+                android:text="@string/add_dependent"
+                android:textAllCaps="false"
                 android:textColor="@color/white"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/dateId"
-                android:textAllCaps="false"
-                />
+                app:layout_constraintTop_toBottomOf="@+id/dateId" />
 
             <EditText
-                android:id="@+id/firstNameDepId"
+                android:id="@+id/firstNameDepid"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
@@ -88,8 +88,8 @@
                 android:inputType="textPersonName"
                 android:minHeight="48dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/firstNameDepId"
-                app:layout_constraintTop_toBottomOf="@+id/firstNameDepId" />
+                app:layout_constraintStart_toStartOf="@+id/firstNameDepid"
+                app:layout_constraintTop_toBottomOf="@+id/firstNameDepid" />
 
             <RadioGroup
                 android:id="@+id/radioGroup"
