--- a/app/src/main/res/navigation/main_navigation_grapg.xml
+++ b/app/src/main/res/navigation/main_navigation_grapg.xml
@@ -15,7 +15,7 @@
         tools:layout="@layout/fragment_home" />
     <fragment
         android:id="@+id/add_dependent"
-        android:name="com.example.medicalappreminder_java.dependantInfo.DependentInfoFragment"
+        android:name="com.example.medicalappreminder_java.dependantInfo.view.DependentInfoFragment"
         tools:layout="@layout/fragment_dependent_info" />
 
 </navigation>
